// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests du formulaire AnalyseMarginaleFormulaire > Doit afficher le formulaire avec les valeurs par défaut et correspondre au snapshot 1`] = `
<div>
  <form
    action="#"
  >
    <div>
      <div
        class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
      >
        <div
          class="pb-4 pt-6"
        >
          <div
            class="grid gap-6"
          >
            <div>
              <div
                class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md"
              >
                <span
                  class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
                >
                  Titulaire
                </span>
                <div>
                  <div
                    class="grid gap-4"
                  >
                    <div
                      class="flex items-start gap-4"
                    >
                      <div
                        class="flex w-full flex-col text-start"
                      >
                        <label
                          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                          for="titulaires[0].nom"
                        >
                          Nom
                          <span
                            class="ml-1 text-rouge"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="relative flex rounded-md shadow-sm"
                        >
                          <input
                            class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                            id="titulaires[0].nom"
                            name="titulaires[0].nom"
                            value="GREENWALD"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-nowrap items-center gap-3 pt-8"
                      >
                        <div
                          class=""
                        >
                          <label
                            class="flex w-fit text-start cursor-default opacity-60"
                          >
                            <input
                              class="cursor-default"
                              disabled=""
                              name="titulaires[0].nomSecable"
                              type="checkbox"
                              value="false"
                            />
                            <span
                              class="ml-2 select-none text-nowrap font-semibold text-bleu-sombre"
                            >
                              Nom sécable
                            </span>
                          </label>
                        </div>
                        <span
                          class="flex h-6 w-6 cursor-help items-center justify-center rounded-full bg-bleu-sombre text-center font-semibold text-blanc"
                          title="Gestion du nom sécable pour la délivrance des extraits"
                        >
                          ?
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4"
                >
                  <div
                    class="flex w-full flex-col text-start  w-full"
                  >
                    <label
                      class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                      for="titulaires[0].prenoms.prenom1"
                    >
                      Prénom 1
                    </label>
                    <div
                      class="relative flex rounded-md shadow-sm"
                    >
                      <input
                        class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                        id="titulaires[0].prenoms.prenom1"
                        name="titulaires[0].prenoms.prenom1"
                        type="text"
                        value="marie-paulita"
                      />
                    </div>
                  </div>
                  <div
                    class="pt-[1.6rem]"
                  >
                    <button
                      aria-label="Ajouter un prénom"
                      class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out  bg-bleu-sombre text-blanc hover:bg-bleu focus-visible:bg-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-gris-sombre disabled:cursor-not-allowed"
                      title="Ajouter un prénom"
                      type="button"
                    >
                      <div
                        class="flex items-center gap-4 px-2"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                          />
                        </svg>
                        <span
                          class="font-marianne text-sm font-bold"
                        >
                          Ajouter un prénom
                        </span>
                      </div>
                    </button>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[0].prenoms.prenom2"
                      >
                        Prénom 2
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[0].prenoms.prenom2"
                          name="titulaires[0].prenoms.prenom2"
                          value="zaria"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[0].prenoms.prenom3"
                      >
                        Prénom 3
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[0].prenoms.prenom3"
                          name="titulaires[0].prenoms.prenom3"
                          value="léna"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex w-full flex-col text-start  champs-motif"
            >
              <label
                class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                for="motif"
              >
                Motif
                <span
                  class="ml-1 text-rouge"
                >
                  *
                </span>
              </label>
              <div
                class="relative flex rounded-md shadow-sm"
              >
                <input
                  class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                  id="motif"
                  name="motif"
                  type="text"
                  value="motif de test"
                />
              </div>
            </div>
            <div
              class="flex justify-between pt-6"
            >
              <button
                class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                disabled=""
                type="button"
              >
                Annuler la saisie en cours
              </button>
              <button
                class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                disabled=""
                type="submit"
              >
                Modifier l'analyse marginale
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Tests du formulaire AnalyseMarginaleFormulaire dans le cas de plusueirs Titulaires > Doit afficher le formulaire avec deux titulaires 1`] = `
<div>
  <form
    action="#"
  >
    <div>
      <div
        class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
      >
        <div
          class="pb-4 pt-6"
        >
          <div
            class="grid gap-6"
          >
            <div>
              <div
                class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md"
              >
                <span
                  class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
                >
                  Titulaire 1
                </span>
                <div>
                  <div
                    class="grid gap-4"
                  >
                    <div
                      class="flex items-start gap-4"
                    >
                      <div
                        class="flex w-full flex-col text-start"
                      >
                        <label
                          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                          for="titulaires[0].nom"
                        >
                          Nom
                          <span
                            class="ml-1 text-rouge"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="relative flex rounded-md shadow-sm"
                        >
                          <input
                            class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                            id="titulaires[0].nom"
                            name="titulaires[0].nom"
                            value="GREENWALD"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-nowrap items-center gap-3 pt-8"
                      >
                        <div
                          class=""
                        >
                          <label
                            class="flex w-fit text-start cursor-default opacity-60"
                          >
                            <input
                              class="cursor-default"
                              disabled=""
                              name="titulaires[0].nomSecable"
                              type="checkbox"
                              value="false"
                            />
                            <span
                              class="ml-2 select-none text-nowrap font-semibold text-bleu-sombre"
                            >
                              Nom sécable
                            </span>
                          </label>
                        </div>
                        <span
                          class="flex h-6 w-6 cursor-help items-center justify-center rounded-full bg-bleu-sombre text-center font-semibold text-blanc"
                          title="Gestion du nom sécable pour la délivrance des extraits"
                        >
                          ?
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4"
                >
                  <div
                    class="flex w-full flex-col text-start  w-full"
                  >
                    <label
                      class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                      for="titulaires[0].prenoms.prenom1"
                    >
                      Prénom 1
                    </label>
                    <div
                      class="relative flex rounded-md shadow-sm"
                    >
                      <input
                        class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                        id="titulaires[0].prenoms.prenom1"
                        name="titulaires[0].prenoms.prenom1"
                        type="text"
                        value="marie-paulita"
                      />
                    </div>
                  </div>
                  <div
                    class="pt-[1.6rem]"
                  >
                    <button
                      aria-label="Ajouter un prénom"
                      class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out  bg-bleu-sombre text-blanc hover:bg-bleu focus-visible:bg-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-gris-sombre disabled:cursor-not-allowed"
                      title="Ajouter un prénom"
                      type="button"
                    >
                      <div
                        class="flex items-center gap-4 px-2"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                          />
                        </svg>
                        <span
                          class="font-marianne text-sm font-bold"
                        >
                          Ajouter un prénom
                        </span>
                      </div>
                    </button>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[0].prenoms.prenom2"
                      >
                        Prénom 2
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[0].prenoms.prenom2"
                          name="titulaires[0].prenoms.prenom2"
                          value="zaria"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[0].prenoms.prenom3"
                      >
                        Prénom 3
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[0].prenoms.prenom3"
                          name="titulaires[0].prenoms.prenom3"
                          value="léna"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md"
              >
                <span
                  class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
                >
                  Titulaire 2
                </span>
                <div>
                  <div
                    class="grid gap-4"
                  >
                    <div
                      class="flex items-start gap-4"
                    >
                      <div
                        class="flex w-full flex-col text-start"
                      >
                        <label
                          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                          for="titulaires[1].nom"
                        >
                          Nom
                          <span
                            class="ml-1 text-rouge"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="relative flex rounded-md shadow-sm"
                        >
                          <input
                            class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                            id="titulaires[1].nom"
                            name="titulaires[1].nom"
                            value="BIGOU"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-nowrap items-center gap-3 pt-8"
                      >
                        <div
                          class=""
                        >
                          <label
                            class="flex w-fit text-start cursor-default opacity-60"
                          >
                            <input
                              class="cursor-default"
                              disabled=""
                              name="titulaires[1].nomSecable"
                              type="checkbox"
                              value="false"
                            />
                            <span
                              class="ml-2 select-none text-nowrap font-semibold text-bleu-sombre"
                            >
                              Nom sécable
                            </span>
                          </label>
                        </div>
                        <span
                          class="flex h-6 w-6 cursor-help items-center justify-center rounded-full bg-bleu-sombre text-center font-semibold text-blanc"
                          title="Gestion du nom sécable pour la délivrance des extraits"
                        >
                          ?
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4"
                >
                  <div
                    class="flex w-full flex-col text-start  w-full"
                  >
                    <label
                      class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                      for="titulaires[1].prenoms.prenom1"
                    >
                      Prénom 1
                    </label>
                    <div
                      class="relative flex rounded-md shadow-sm"
                    >
                      <input
                        class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                        id="titulaires[1].prenoms.prenom1"
                        name="titulaires[1].prenoms.prenom1"
                        type="text"
                        value="marie-paulita"
                      />
                    </div>
                  </div>
                  <div
                    class="pt-[1.6rem]"
                  >
                    <button
                      aria-label="Ajouter un prénom"
                      class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out  bg-bleu-sombre text-blanc hover:bg-bleu focus-visible:bg-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-gris-sombre disabled:cursor-not-allowed"
                      title="Ajouter un prénom"
                      type="button"
                    >
                      <div
                        class="flex items-center gap-4 px-2"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                          />
                        </svg>
                        <span
                          class="font-marianne text-sm font-bold"
                        >
                          Ajouter un prénom
                        </span>
                      </div>
                    </button>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[1].prenoms.prenom2"
                      >
                        Prénom 2
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[1].prenoms.prenom2"
                          name="titulaires[1].prenoms.prenom2"
                          value="zaria"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex w-full flex-col text-start  w-full"
                    >
                      <label
                        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                        for="titulaires[1].prenoms.prenom3"
                      >
                        Prénom 3
                      </label>
                      <div
                        class="relative flex rounded-md shadow-sm"
                      >
                        <input
                          class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                          id="titulaires[1].prenoms.prenom3"
                          name="titulaires[1].prenoms.prenom3"
                          value="léna"
                        />
                        <button
                          aria-label="Supprimer ce prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                          title="Supprimer ce prénom"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex w-full flex-col text-start  champs-motif"
            >
              <label
                class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                for="motif"
              >
                Motif
                <span
                  class="ml-1 text-rouge"
                >
                  *
                </span>
              </label>
              <div
                class="relative flex rounded-md shadow-sm"
              >
                <input
                  class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                  id="motif"
                  name="motif"
                  type="text"
                  value="motif de test"
                />
              </div>
            </div>
            <div
              class="flex justify-between pt-6"
            >
              <button
                class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                disabled=""
                type="button"
              >
                Annuler la saisie en cours
              </button>
              <button
                class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                disabled=""
                type="submit"
              >
                Modifier l'analyse marginale
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
